fix(test): keep invitation tests Java 17 compatible